# icloud-migration

./: .gitignore  CLAUDE.md  migrate.sh  pyproject.toml
.claude/: settings.local.json
src/icloud_migration/: drive.py
tests/: test_drive.py
