[project]
name = "icloud-migration"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "icloudpd",
    "python-dotenv",
]

[project.scripts]
icloud-drive = "icloud_migration.drive:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/icloud_migration"]

[dependency-groups]
dev = [
    "pytest",
]
